# llm_rust_django_backend

./: .env  .gitignore  Makefile  README.md  dev.Dockerfile  manage.py  pytest.ini  requirements.txt  research.md
agent_app/: constants.py
agent_app/Guardrails/: utils.py
agent_app/Guardrails/knowledge_base/: constants.py
agent_app/audio/: transcription_2023-12-22_23-59-52.txt
agent_app/binaries/: run
agent_app/routers/: gpt_stream.py  guard_rails.py  prompt_c.py  speech2text.py  text2task.py
agent_project/: asgi.py  settings.py  urls.py  wsgi.py
fact_checker/utils/: utils.py
hallucination_app/: demo_gpt.py  test_nemo_guardrails.py
hallucination_app/Guardrails/: .env  config.co  nemo_dataset.py  nemo_dataset_local.py  utils.py
hallucination_app/Guardrails/Nemo_Guardrails/: test_nemo_guardrails.py
hallucination_app/Guardrails/knowledge_base/: colang.co  constants.py  model_config.yaml
hallucination_app/LLM_CORE/DATA_LOADERS/: loader.py
hallucination_app/LLM_CORE/PREPROCESSING/: preprocessor.py
hallucination_app/LLM_CORE/schema/: document.py
hallucination_app/routers/: gpt_api.py  gpt_stream.py  guard_rails.py  prompt_c.py
hallucination_app/schemas/: file.py
hallucination_project/: urls.py
manager/CLI/ffmpeg_command_generator/: Cargo.toml
manager/DataConnector/: Cargo.toml
manager/DataConnector/docs/shuttle-next/: getting-started.mdx  overview.mdx
manager/DataConnector/src/: main.rs  open_ai.rs  uploader.rs  utils.rs
manager/llama2.c/: requirements.txt  run  run.c
requirements/: dev.txt  prod.txt
scripts/: speech2text.py
(+2 files in other folders)
